Initial implementation for the Module 7 assignment. Updated README with running JavaFX apps. Updated gitignore.